samples/_failures_safe/1761185947_d74893_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27222d23.c: In function ‘main’:
./samples/SAFE/__tmp_27222d23.c:168: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_27222d23.c:167:9: error: expected declaration or statement at end of input
  167 |         if
      |         ^~
./samples/SAFE/__tmp_27222d23.c:167:9: error: expected declaration or statement at end of input
